[project]
name = "pypi-mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
index-url = "http://localhost:8000/simple"
allow-insecure-host = ["localhost"]

[tool.uv.pip]
index-url = "http://localhost:8000/simple"